Refactor error handling by introducing UtilsErrors class for better error reporting and display functionality